Top nav bar stablisation

--- a/app/views/signin-twitter.html
+++ b/app/views/signin-twitter.html
@@ -27,12 +27,14 @@
 
 <ul class=nav navbar-nav>
 <li ng-show="!twitterSession" class="signin">
-	<a href="">
-		<span class="link" ng-click="hello('twitter').login()">
-		<i style="padding-right: 4px;" class="fa fa-twitter"></i><span class="hidden-sm hidden-xs">Signup Via Twitter</span>
+	<a href="" style="padding-top: 0px;">
+		<span class="link" ng-click="#signupModal" data-target="#signupModal">
+		<i style="padding-right: 4px;" class="fa fa-twitter"></i>
+		<span class="hidden-sm hidden-xs" style="padding-top: 0px;padding-left: 0px;padding-right: 0px;padding-bottom: 0px;">Signup Via Twitter</span>
 	</span>
 	</a>
 
 </li>
 </ul>
+
 
