--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -6,8 +6,12 @@
     </div>
     <div class="wall-container container-fluid">
         <div class="container content-container wall-body">
-            <div class="result-container col-md-8">
+            <div ng-show="wall.statuses.length>0" class="result-container col-md-8">
                 <div class="animate-repeat"  ng-repeat="status in wall.statuses" linear open="wall.open" data="status"></div>
+            </div>
+            <div ng-show="wall.statuses.length<=0" class="col-md-12">
+                <div class="loading-redirect" style="text-align: center;"><span id="bull1">&bull;</span><span id="bull2">&bull;</span><span id="bull3">&bull;</span></div>
+                <h2 id="redirect-text">Loading your tweet wall...</h2>
             </div>
         </div>
     </div>
