Add news filter

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -33,6 +33,9 @@
                         <li ng-class="(search.currentFilter === 'videos') ? 'active' : ''" ng-click="search.filterVideos()">
                             <a href="#">videos</a>
                         </li>
+                        <li ng-class="(search.currentFilter === 'news') ? 'active' : ''" ng-click="search.filterNews()">
+                            <a href="#">news</a>
+                        </li>
 
                         <li><a href="#">More options</a></li>
                     </ul>
