Removes default open in top navigation

--- a/app/views/signin-twitter.html
+++ b/app/views/signin-twitter.html
@@ -1,5 +1,5 @@
 <ul class="nav navbar-nav pull-right">
-	<li class="dropdown user user-menu open" ng-show="twitterSession" ng-show="twitterSession" style="margin-right: 20px;">
+	<li class="dropdown user user-menu" ng-show="twitterSession" ng-show="twitterSession" style="margin-right: 20px;">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
 			<img ng-src="{{twitterSession.profile_image_url_https}}" class="user-image" alt="{{twitterSession.name}}">
 			<span class="hidden-xs">{{twitterSession.name}}</span>
