Moving towards a twitter deisgn

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,7 @@
 @import 'vars';
 @import 'loader';
 @import 'layout/cms-view';
+
 * {
     font-family: $font-family;
 }
@@ -1708,3 +1709,7 @@ body {
 	text-align: center;
 	padding: 20% 0;
 }
+
+@import 'loklakcore';
+@import 'loklak_more_1';
+@import 'loklak_more_2';
