Fixes the rendering of the CSS issues, not pages broken, time to fix the styles

--- a/app/styles/_loklak_more_1.scss
+++ b/app/styles/_loklak_more_1.scss
@@ -8343,7 +8343,7 @@ span.character {
     color: #8899a6
 }
 
-. .customize-by-location,.select-default {
+.customize-by-location,.select-default {
     font-weight: normal
 }
 
@@ -13291,8 +13291,8 @@ span.character {
 }
 
 .ProfileAlerts .signup input,.ProfileAlerts .signinfrm input {
-    width: 100%\0/;
-    margin-top: 15px\0/
+    width: 100%;
+    margin-top: 15px;
 }
 
 .ProfileAlerts .can-receive {
