--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -1,19 +1,29 @@
+<link rel="stylesheet" type="text/css" href="css/ng-tags-input.min.css">
+<link rel="stylesheet" type="text/css" href="css/ng-tags-input.bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.vertical-tabs.min.css">
 <div>
-    <div ng-style="{'background-color': wall.wallOptions.headerColour}" ng-class="wall.wallOptions.headerPosition=='Bottom'? 'row wall-header wall-footer' : 'row wall-header' ">
+    <div ng-style="{'background-color': wall.wallOptions.headerColour}" ng-class="getHeaderClass()">
         <div ng-style="{'color': wall.wallOptions.headerForeColour} " class="hashtag col-md-4">{{wall.wallOptions.mainHashtag}}</div>
         <div ng-style="{'color': wall.wallOptions.headerForeColour} " class="event-name col-md-4">{{wall.wallOptions.eventName}}</div>
-        <div class="banner col-md-4"><a ng-style="{'color': wall.wallOptions.headerForeColour} "  href="/">Powered by Loklak</a></div>
+        <div class="banner col-md-3"><a ng-style="{'color': wall.wallOptions.headerForeColour} " href="/">Powered by Loklak</a></div>
+        <div class="banner col-md-1">
+            <i ng-style="{'color': wall.wallOptions.headerForeColour} " data-toggle="modal" data-target="#wall-modal" class="fa fa-fw fa-gear"></i>
+            <i ng-style="{'color': wall.wallOptions.headerForeColour} " ng-click="fullscreen()" class="fa fa-fw fa-arrows-alt"></i>
+        </div>
     </div>
     <div class="wall-container container-fluid">
         <div class="container content-container wall-body">
             <div ng-show="wall.statuses.length>0" class="result-container col-md-8">
-                <div class="animate-repeat"  ng-repeat="status in wall.statuses" linear open="wall.open" data="status"></div>
+                <div class="animate-repeat" ng-repeat="status in wall.statuses" linear open="wall.open" data="status"></div>
             </div>
-            <div ng-show="wall.statuses.length<=0" class="col-md-12">
+            <div ng-show="wall.statuses.length<=0 && !wall.showEmpty" class="col-md-12">
                 <div class="loading-redirect" style="text-align: center;"><span id="bull1">&bull;</span><span id="bull2">&bull;</span><span id="bull3">&bull;</span></div>
                 <h2 id="redirect-text">Loading your tweet wall...</h2>
             </div>
+            <div ng-show="wall.showEmpty" class="col-md-12" style="text-align: center;">
+                <h3>No tweets to show yet. Try changing the search parameters or come back here after some time!</h3>
+            </div>
         </div>
     </div>
-
 </div>
+<div ng-include="'wall/wallCreationModal.html'"></div>
