--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1704,7 +1704,7 @@ body {
 	padding: 0;
 }
 .tabs-left > li > a {
-	min-height: 150px;
+	height: 150px;
 	text-align: center;
 	padding: 20% 0;
 }
@@ -1717,9 +1717,11 @@ body {
 }
 
 .wall-modal-content {
-  height: 100%;
-  border-radius: 0;
+  min-height: 100%;
+  border-radius: 25;
+  width: 100%;
 }
+
 .redirect-page {background:#F5F8FA;height:100%;text-align:center;display:-webkit-flex;display:flex;height:100%;-webkit-flex-flow:column wrap;flex-flow:column wrap;-webkit-justify-content:center;justify-content:center;margin:0;padding:10px}
 .loading-redirect{font-size:50px;height:1em;-webkit-animation:fadeout .5s 5s;animation:fadeout .5s 5s;-webkit-animation-fill-mode:forwards;animation-fill-mode:forwards}.loading-redirect span{-webkit-animation:fadein .5s .5s alternate infinite;animation:fadein .5s .5s alternate infinite}.loading-redirect span:nth-child(2){-webkit-animation-delay:.75s;animation-delay:.75s}.loading-redirect span:nth-child(3){-webkit-animation-delay:1s;animation-delay:1s}#redirect-text{text-align:center;font-family:helvetica;opacity:0;-webkit-animation:fadein .5s 3s;animation:fadein .5s 3s;-webkit-animation-fill-mode:forwards;animation-fill-mode:forwards}.overflow{background:#000;color:#fff;max-width:100%;text-align:left}@-webkit-keyframes fadein{from{opacity:0;-webkit-transform:scale(.2)}to{opacity:1;-webkit-transform:scale(1)}}@-webkit-keyframes fadeout{to{opacity:0;height:0}}@keyframes fadein{from{opacity:0;transform:scale(.2)}to{opacity:1;transform:scale(1)}}@keyframes fadeout{to{opacity:0;height:0}}
 .loading-redirect-img {
@@ -1727,4 +1729,4 @@ body {
 	height: 100px;
 	margin: 0 auto;
 }
-}
+
