--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -104,7 +104,7 @@
                                                             <div class="col-xs-6">
                                                                 <div class="form-group">
                                                                     <label>None of these words</label>
-                                                                    <tags-input disabled ng-model="wallOptions.noWords" placeholder="Type and hit enter" name="nots"></tags-input>
+                                                                    <tags-input ng-model="wallOptions.noWords" placeholder="Type and hit enter" name="nots"></tags-input>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label>These hashtags</label>
@@ -240,7 +240,7 @@
                                                                 </div>
                                                                 <div class="col-md-6">
                                                                     <label class="layoutRadio">
-                                                                        <input disabled ng-model="wallOptions.layoutStyle" value="3" name="layoutStyle" type="radio"></input>
+                                                                        <input ng-model="wallOptions.layoutStyle" value="3" name="layoutStyle" type="radio"></input>
                                                                         <img src="images/cot-layout-thumb.jpg" alt="">
                                                                     </label>
                                                                 </div>
