--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1752,6 +1752,7 @@ body {
         border-radius: 6px;
     }
     .coa-content {
+    	padding-left: 20px;
         position: relative;
         margin-left: 200px;
         min-height: 180px;
@@ -1776,6 +1777,7 @@ body {
             font-size: 18px;
             color: #8899A6;
             font-weight: normal;
+            padding-top: 20px;
             font-style: italic;
         }
     }
