Added centre of attraction and masonry layout #72

--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -225,16 +225,16 @@
                                                             <label>Select a layout to customize (Only layout #1 available for now)</label>
                                                         </div>
                                                         <div class="box-body">
-                                                            <div class="row" ng-init="wallOptions.layoutStyle='1'">
+                                                            <div class="row">
                                                                 <div class="col-md-6">
                                                                     <label class="layoutRadio">
-                                                                        <input disabled ng-model="wallOptions.layoutStyle" value="1" name="layoutStyle" type="radio"></input>
+                                                                        <input ng-model="wallOptions.layoutStyle" value="1" name="layoutStyle" type="radio"></input>
                                                                         <img src="images/linear-layout-thumb.jpg" alt="">
                                                                     </label>
                                                                 </div>
                                                                 <div class="col-md-6">
                                                                     <label class="layoutRadio">
-                                                                        <input disabled ng-model="wallOptions.layoutStyle" value="2" name="layoutStyle" type="radio"></input>
+                                                                        <input ng-model="wallOptions.layoutStyle" value="2" name="layoutStyle" type="radio"></input>
                                                                         <img src="images/masonry-layout-thumb.jpg" alt="">
                                                                     </label>
                                                                 </div>
