--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -8,7 +8,7 @@
         <div ng-style="{'color': wall.wallOptions.headerForeColour} " class="event-name col-md-4">{{wall.wallOptions.eventName}}</div>
         <div class="banner col-md-3"><a ng-style="{'color': wall.wallOptions.headerForeColour} " href="/">Powered by Loklak</a></div>
         <div class="banner col-md-1">
-            <i ng-style="{'color': wall.wallOptions.headerForeColour} " data-toggle="modal" data-target="#wall-modal" class="fa fa-fw fa-gear"></i>
+            <!-- <i ng-style="{'color': wall.wallOptions.headerForeColour} " data-toggle="modal" data-target="#wall-modal" class="fa fa-fw fa-gear"></i> -->
             <i ng-style="{'color': wall.wallOptions.headerForeColour} " ng-click="fullscreen()" class="fa fa-fw fa-arrows-alt"></i>
         </div>
     </div>
@@ -17,7 +17,7 @@
             <div ng-switch on="wall.wallOptions.layoutStyle" ng-show="wall.statuses.length>0" ng-class="wall.wallOptions.layoutStyle==1?'result-container col-md-8':'result-container col-md-12'">
                 <div ng-switch-when="1" class="animate-repeat" ng-repeat="status in wall.statuses"  linear open="wall.open" data="status"></div>
                 <div ng-switch-when="2">
-                    <div deckgrid class="deckgrid" source="wall.statuses" cardTemplate="wall/templates/card.html"></div>
+                    <div deckgrid class="deckgrid animate-repeat" source="wall.statuses" cardTemplate="wall/templates/card.html"></div>
                 </div>
                 <div ng-switch-when="3" class="animate-repeat" ng-repeat="status in wall.statuses" coa open="wall.open" data="status"></div>
             </div>
