Experimenting with charts, #73

--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="css/angular-toggle-switch.css">
 <div class="modal fade" id="wall-modal" role="dialog">
     <div class="modal-dialog modal-lg wall-modal-dialog">
         <div class="modal-content wall-modal-content">
@@ -67,6 +68,12 @@
                                                         <span class="input-group-addon">#</span>
                                                         <input required ng-model="wallOptions.mainHashtagText" type="text" class="form-control" id="hashtagInput" placeholder="loklak">
                                                     </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label>Show statistics</label>
+                                                    <br>
+                                                    <toggle-switch on-label="YES" off-label="NO" ng-model="wallOptions.showStatistics">
+                                                        <toggle-switch>
                                                 </div>
                                             </div>
                                             <!-- /.box-body -->
