--- a/app/views/wall/templates/linear.html
+++ b/app/views/wall/templates/linear.html
@@ -5,11 +5,11 @@
         <p class="linear-content-text" ng-bind-html="data.text | tweetMention | tweetHashtag | toTrusted"></p>
         <!-- Images -->
         <!--         <div data-ng-click="open(data.id_str);" ng-class="{'images-wrapper': true, 'showdetail': showdetail}" ng-if="data.images_count"> -->
-        <div masonry="{ transitionDuration: '1s'}" item-selector=".masonry-brick">
+        <!-- <div masonry="{ transitionDuration: '1s'}" item-selector=".masonry-brick">
             <div class="masonry-brick" ng-repeat="image in data.images">
                 <img ng-click="wall.open()" class="masonry-image spinner" ng-src="{{image | biggerProfileImage}}" alt="A masonry brick">
             </div>
-        </div>
+        </div> -->
         <!-- Metadata -->
         <div class="metadata">
             <a class="name" ng-href="{{'https://twitter.com/' + data.user.screen_name}}">{{data.user.name}}</a>
