--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -361,7 +361,7 @@ body {
 
 .content-wrapper {
     // Overfule adminLTE admin.css
-    min-height: 100vh !important;
+   // min-height: 100vh !important;
     background: #F5F8FA !important;
 }
 
@@ -1030,6 +1030,15 @@ body {
 					}
 				}
 			}
+
+			#search-map {
+				width: 100%;
+				height: 100vh;
+				position: fixed !important;
+				margin-top: 0 !important;
+				top: 52px;
+				left: 0;
+			}
 		}
 	}
 	
@@ -1069,6 +1078,9 @@ body {
 /* Search filters */
 	.filters-container {
 		height: 46px;
+		position: relative;
+		z-index: 100;
+		background: rgba(245, 248, 250, 0.5);
 		text-align: center;
 		ul li {
 			display: inline-block;
