Add search filter

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -61,7 +61,7 @@
             </div>
              <!-- Map result -->
             <div ng-show="search.showMap" class="search-map-wrapper">
-                <div id="search-map" style="width:100%; height:100vh; margin-top:-52px"></div>
+                <div id="search-map" style="width:100%; height:100vh;"></div>
             </div>
 
             <!-- Right content: Other statistics -->
