--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -2,10 +2,9 @@
 <div class="content-wrapper">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
    <div id="map" style="width:100%; height:800px"></div>
-
-
-
+   <div id="TweetBox" style="position:absolute; top:10%;left:15%; max-width:50%; border:2px;"></div>
 </div>
+
 
 
 
