--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -23,6 +23,7 @@
                 <div ng-switch-when="3" class="animate-repeat" ng-repeat="status in wall.statuses" coa open="wall.open" data="status"></div>
                 <div ng-switch-when="4">
                     <div data="wall.statuses" id="map" maplayout style="width:100%; height:800px"></div>
+                     <div id="TweetBox" style="position:absolute; top:10%;left:15%; max-width:50%; border:2px;"></div>
                 </div>
             </div>
             <div ng-show="wall.statuses.length<=0 && !wall.showEmpty" class="col-md-12">
