--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -3,6 +3,14 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap.vertical-tabs.min.css">
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
 <link rel="stylesheet" type="text/css" href="css/angular-chart.css">
+<style>
+.custom .leaflet-popup-tip,
+.custom .leaflet-popup-content-wrapper {
+    background: #3c8dbc;
+    color: #ffffff;
+    z-index: 99999;
+}
+</style>
 <div>
     <div ng-style="{'background-color': wall.wallOptions.headerColour}" ng-class="getHeaderClass()">
         <div ng-style="{'color': wall.wallOptions.headerForeColour} " class="hashtag col-md-4">{{wall.wallOptions.mainHashtag}}</div>
@@ -23,7 +31,7 @@
                 <div ng-switch-when="3" class="animate-repeat" ng-repeat="status in wall.statuses" coa open="wall.open" data="status"></div>
                 <div ng-switch-when="4">
                     <div data="wall.statuses" id="map" maplayout style="width:100%; height:800px"></div>
-                     <div id="TweetBox" style="position:absolute; top:10%;left:15%; max-width:50%; border:2px;"></div>
+
                 </div>
             </div>
             <div ng-show="wall.statuses.length<=0 && !wall.showEmpty" class="col-md-12">
