--- a/app/views/single-status.html
+++ b/app/views/single-status.html
@@ -12,33 +12,33 @@
 
 	<div class="tweet-content">
 	<!-- Main content -->
-	<p class="tweet-content-text" ng-bind-html="data.text | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted"></p>
+	<p class="tweet-content-text" ng-bind-html="data.text | tweetTextLink | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted"></p>
 
-	<div class="debugged-link-container" debugged-link link-array="data.links" debuggable="debuggable"></div>
+	<div class="debugged-link-container" debugged-link image-link="data.images" link-array="data.links" debuggable="debuggable"></div>
 
 	<!-- Images -->
 	<div class="status-images-container" ng-show="!debuggable">
 		<!-- Images - 1 img -->
 		<div data-ng-click="openSwipe(data.id_str);" class="images-wrapper clearfix" ng-if="data.images_count === 1">
-		       <div class="single-masonry-item" ng-repeat="image in data.images">
+		       <div class="single-masonry-item" ng-repeat="image in data.images track by $index">
 		           <img ng-src="{{image}}" alt="A masonry brick">
 		       </div>
 		</div>
 		<!-- Images - 2 imgs -->
 		<div data-ng-click="openSwipe(data.id_str);" class="images-wrapper clearfix showcomposition" ng-if="data.images_count === 2">
-		       <div class="double-masonry-item" ng-repeat="image in data.images">
+		       <div class="double-masonry-item" ng-repeat="image in data.images track by $index">
 		           <img ng-src="{{image}}" alt="A masonry brick">
 		       </div>
 		</div>
 		<!-- Images - 3 imgs -->
 		<div data-ng-click="openSwipe(data.id_str);" class="images-wrapper clearfix showcomposition" ng-if="data.images_count === 3">
-		       <div ng-class="{'triple-masonry-item': true, 'first-item': ($index === 0)}" ng-repeat="image in data.images">
+		       <div ng-class="{'triple-masonry-item': true, 'first-item': ($index === 0)}" ng-repeat="image in data.images track by $index">
 		           <img ng-src="{{image}}" alt="A masonry brick">
 		       </div>
 		</div>
 		<!-- Images - 4 imgs -->
 		<div data-ng-click="openSwipe(data.id_str);" class="images-wrapper clearfix showcomposition" ng-if="data.images_count === 4">
-		       <div class="quad-masonry-item" ng-repeat="image in data.images">
+		       <div class="quad-masonry-item" ng-repeat="image in data.images track by $index">
 		           <img ng-src="{{image}}" alt="A masonry brick">
 		       </div>
 		</div>
